@@ -174,6 +174,8 @@ FUSE_2.8 {
 		fuse_reply_ioctl_iov;
 		fuse_reply_ioctl_retry;
 		fuse_reply_poll;
+		fuse_req_getgroups;
+		fuse_getgroups;
 
 	local:
 		*;
